--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   quran: ^1.2.2
   get: ^4.6.5
 
+  smooth: packages/flutter_smooth/packages/smooth
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -48,6 +50,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+
+  # smooth_dev: packages/flutter_smooth/packages/smooth_dev
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
